Fixed alignment of player icons

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -374,6 +374,8 @@ body {
 }
 
 #player-container .player .background {
+    position: relative;
+
     top: 0;
     margin-left: auto;
     margin-right: auto;
@@ -385,9 +387,11 @@ body {
     background-color: white;
 }
 #player-container .player .background .icon {
-    position: relative;
+    position: absolute;
 
-    top: -40%;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 50%);
 
     width: 90%;
     height: 90%;
